platform/base/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: postgres
spec:
  ports:
    - name: postgresql
      port: 5432
      targetPort: postgresql
  selector:
    app.kubernetes.io/name: postgresql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql
  namespace: postgres
spec:
  serviceName: postgresql
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:15-alpine
          imagePullPolicy: IfNotPresent
          args:
            - -c
            - max_connections=500
          ports:
            - name: postgresql
              containerPort: 5432
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - lab-postgres-user
            periodSeconds: 10
            failureThreshold: 12
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - lab-postgres-user
            periodSeconds: 20
            failureThreshold: 6
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
            - name: initdb
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: initdb
          configMap:
            name: postgresql-initdb
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
